# sync_conda_environments

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conda_operations.py  file_operations.py  main.py  process.py  pyproject.toml  requirements-tests.txt  requirements.txt  tox.ini
.github/actions/run-pytest/: action.yml
.github/workflows/: codeql-analysis.yml  main.yml
helpers/: conda.py  conda_operations.py  file.py  file_operations.py  process.py
src/sync_conda_environments/: main.py
src/sync_conda_environments/helpers/: conda.py
tests/: test_conda_helpers.py  test_file_helpers.py  test_process_helpers.py
