[tool.poetry]
name = "sync_conda_environments"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Setu Shah <setu4993@yahoo.co.in>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
